Upgrade to Java 17.