@@ -10,7 +10,7 @@ buildscript {
 
 plugins {
     id "java"
-    id 'maven'
+    id 'maven-publish'
     id 'signing'
     id 'jacoco'
     id 'application'
@@ -42,20 +42,14 @@ def looksLikeWereInAGitRepository(){
 // Ensure that we have a clone of the git repository, and resolve any required git-lfs
 // resource files that are needed to run the build but are still lfs stub files.
 def ensureBuildPrerequisites(buildPrerequisitesMessage) {
-    if (!JavaVersion.current().isJava8Compatible()) {
-        throw new GradleException(
-                "Java 8 or later is required to build Picard, but ${JavaVersion.current()} was found. "
-                        + "$buildPrerequisitesMessage")
+    if (!JavaVersion.current().equals(JavaVersion.VERSION_17)) {
+        println("Warning: using Java ${JavaVersion.current()} but only Java 17 has been tested.")
     }
-    // Make sure we can get a ToolProvider class loader (for Java 8). If not we may have just a JRE.
-    if (JavaVersion.current().isJava8() && ToolProvider.getSystemToolClassLoader() == null) {
-        throw new GradleException(
-                "The ClassLoader obtained from the Java ToolProvider is null. "
-                        + "If using Java 8 you must have a full JDK installed and not just a JRE. $buildPrerequisitesMessage")
-    }
-    if (!JavaVersion.current().isJava8() && !JavaVersion.current().isJava11()) {
-        println("Warning: using Java ${JavaVersion.current()} but only Java 8 and Java 11 have been tested.")
-    }
+//    if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+//        throw new GradleException(
+//                "A Java 17 compatible (Java 17 or later) version is required to build GATK, but ${JavaVersion.current()} was found. "
+//                        + "$buildPrerequisitesMessage")
+//    }
     if (!looksLikeWereInAGitRepository()) {
         throw new GradleException("This doesn't appear to be a git folder. " +
                 "The Picard Github repository must be cloned using \"git clone\" to run the build. " +
@@ -71,11 +65,12 @@ final googleNio = 'com.google.cloud:google-cloud-nio:0.123.25'
 // Get the jdk files we need to run javaDoc. We need to use these during compile, testCompile,
 // test execution, and gatkDoc generation, but we don't want them as part of the runtime
 // classpath and we don't want to redistribute them in the uber jar.
-final javadocJDKFiles = ToolProvider.getSystemToolClassLoader() == null ? files([]) : files(((URLClassLoader) ToolProvider.getSystemToolClassLoader()).getURLs())
+//final javadocJDKFiles = ToolProvider.getSystemToolClassLoader() == null ? files([]) : files(((URLClassLoader) ToolProvider.getSystemToolClassLoader()).getURLs())
 
 configurations {
     cloudConfiguration {
-        extendsFrom runtime
+        //TODO ?
+        extendsFrom implementation
         dependencies {
             cloudConfiguration(googleNio)
         }
@@ -83,25 +78,21 @@ configurations {
 }
 
 dependencies {
-    compile('com.intel.gkl:gkl:0.8.8') {
+    implementation('com.intel.gkl:gkl:0.8.8') {
         exclude module: 'htsjdk'
     }
-    compile 'com.google.guava:guava:15.0'
-    compile 'org.apache.commons:commons-math3:3.5'
-    compile 'org.apache.commons:commons-collections4:4.3'
-    compile 'commons-lang:commons-lang:2.6'
-    compile 'com.github.samtools:htsjdk:' + htsjdkVersion
-    compile 'org.broadinstitute:barclay:4.0.2'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.1'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'com.google.guava:guava:15.0'
+    implementation 'org.apache.commons:commons-math3:3.5'
+    implementation 'org.apache.commons:commons-collections4:4.3'
+    implementation 'commons-lang:commons-lang:2.6'
+    implementation 'com.github.samtools:htsjdk:' + htsjdkVersion
+    implementation 'org.broadinstitute:barclay:4.0.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     compileOnly(googleNio)
 
-    // javadoc utilities; compile/test only to prevent redistribution of sdk jars
-    compileOnly(javadocJDKFiles)
-    testCompile(javadocJDKFiles)
-
-    testCompile 'org.testng:testng:6.14.3'
-    testCompile 'org.apache.commons:commons-lang3:3.6'
+    testImplementation 'org.testng:testng:6.14.3'
+    testImplementation 'org.apache.commons:commons-lang3:3.6'
 }
 
 configurations.all {
@@ -111,8 +102,127 @@ configurations.all {
     }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.17
+targetCompatibility = 1.17
+
+run {
+    // taken from the union of everything encountered by tests, plus everything defined here:
+    // https://github.com/apache/spark/blob/v3.3.0/launcher/src/main/java/org/apache/spark/launcher/JavaModuleOptions.java
+    jvmArgs = [
+//            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.nio.cs=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.security.action=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.channels.spi=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.file.attribute=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.net.www.protocol.jar=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.invoke.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.concurrent.locks=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.annotation=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.text=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+//            '--add-opens', 'java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+//            '--add-opens', 'java.management/javax.management=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.util.locale=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
+//            '--add-opens', 'java.xml/com.sun.xml.internal.stream.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.factory=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.channels=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.security.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.scope=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+//            '--add-opens', 'java.management/com.sun.jmx.interceptor=ALL-UNNAMED',
+//            '--add-opens', 'java.management/javax.management.openmbean=ALL-UNNAMED',
+//            '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
+//            '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
+//            '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
+//            '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+//            '--add-opens', 'java.security.jgss/sun.security.krb5=ALL-UNNAMED',
+//            '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
+//
+//            '-Dio.netty.tryReflectionSetAccessible=true'
+    ]
+}
+test {
+    jvmArgs = [
+//            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.nio.cs=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.security.action=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.channels.spi=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.file.attribute=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.net.www.protocol.jar=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.invoke.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.concurrent.locks=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.annotation=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.text=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+//            '--add-opens', 'java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+//            '--add-opens', 'java.management/javax.management=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.util.locale=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
+//            '--add-opens', 'java.xml/com.sun.xml.internal.stream.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.factory=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.nio.channels=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.security.util=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.scope=ALL-UNNAMED',
+//            '--add-opens', 'java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+//            '--add-opens', 'java.management/com.sun.jmx.interceptor=ALL-UNNAMED',
+//            '--add-opens', 'java.management/javax.management.openmbean=ALL-UNNAMED',
+//            '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
+//            '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
+//            '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
+//            '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+//            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
+//            '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+//            '--add-opens', 'java.security.jgss/sun.security.krb5=ALL-UNNAMED',
+//            '--add-opens', 'java.prefs/java.util.prefs=ALL-UNNAMED', // jacoco
+//
+//            '-Dio.netty.tryReflectionSetAccessible=true'
+    ]
+}
 
 final isRelease = Boolean.getBoolean("release")
 final gitVersion = gitVersion().replaceAll(".dirty", "")
@@ -178,7 +288,7 @@ task picardDoc(type: Javadoc, dependsOn: ['cleanPicardDoc', classes]) {
     // runtime classpath, as well as jdk javadoc files such as tools.jar, where com.sun.javadoc lives.
     // The compileClasspath is required in order for the picarDoc doclet process to resolve the googleNio
     // classes, which are compile-time only.
-    classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath + javadocJDKFiles
+    classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath
     options.docletpath = classpath.asType(List)
     options.doclet = "picard.util.help.PicardHelpDoclet"
 
@@ -289,8 +399,8 @@ jacocoTestReport {
     }
 }
 
- wrapper {
-    gradleVersion = '5.6'
+wrapper {
+    gradleVersion = '7.5.1'
 }
 
 task javadocJar(type: Jar) {
@@ -325,51 +435,47 @@ signing {
  *
  * For releasing to your local maven repo, use gradle install
  */
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: project.findProperty("sonatypeUsername"), password: project.findProperty("sonatypePassword"))
-            }
-
-            snapshotRepository(url: "https://broadinstitute.jfrog.io/broadinstitute/libs-snapshot-local/") {
-                authentication(userName: System.env.ARTIFACTORY_USERNAME, password: System.env.ARTIFACTORY_PASSWORD)
-            }
-
-            pom.project {
-                name 'Picard'
-                packaging 'jar'
-                description 'A set of command line tools (in Java) for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.'
-                url 'http://broadinstitute.github.io/picard/'
-
-                developers {
-                    developer {
-                        id 'picard'
-                        name 'Picard Team'
-                        url 'http://broadinstitute.github.io/picard'
-                    }
-                }
+publishing {
+    publications {
+        picard(MavenPublication) {
+            pom {
+                name = 'Picard'
+                packaging = 'jar'
+                description = 'A set of command line tools (in Java) for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.'
+                url = 'http://broadinstitute.github.io/picard/'
 
                 scm {
-                    url 'git@github.com:broadinstitute/picard.git'
-                    connection 'scm:git:git@github.com:broadinstitute/picard.git'
+                    url = 'git@github.com:broadinstitute/picard.git'
+                    connection = 'scm:git:git@github.com:broadinstitute/picard.git'
                 }
 
                 licenses {
                     license {
-                        name 'MIT License'
-                        url 'http://opensource.org/licenses/MIT'
-                        distribution 'repo'
+                        name = 'MIT License'
+                        url = 'http://opensource.org/licenses/MIT'
+                        distribution = 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'picard'
+                        name = 'Picard Team'
+                        url = 'http://broadinstitute.github.io/picard'
                     }
                 }
             }
         }
     }
-    doFirst {
-        System.out.println("Uploading version $version")
-    }
+//    repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+//        authentication(userName: project.findProperty("sonatypeUsername"), password: project.findProperty("sonatypePassword"))
+//    }
+//    snapshotRepository(url: "https://broadinstitute.jfrog.io/broadinstitute/libs-snapshot-local/") {
+//        authentication(userName: System.env.ARTIFACTORY_USERNAME, password: System.env.ARTIFACTORY_PASSWORD)
+//    }
+//    doFirst {
+//        System.out.println("Uploading version $version")
+//    }
 }
 
 ext.htmlDir = file("build/docs/html")
